добавили обертки для картинок в reason

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -202,6 +202,12 @@ body {
   flex-wrap: wrap;
   width: 100%;
   padding: 0;
+  background-color: #82B3D3;
+}
+
+.reason-item-big .reason-name,
+.reason-item-big .reason-description {
+  color: #FFFFFF;
 }
 
 .reason-item-wrapper {
@@ -223,6 +229,10 @@ body {
 
 .reason-description {
   margin: 0;
+}
+
+.reason-img-wrapper {
+  width: 800px;
 }
 
 .reason-img {
@@ -366,7 +376,6 @@ body {
 .social-list {
   max-width: 150px;
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
@@ -542,12 +551,12 @@ body {
 .hotels-title {
   margin: 0;
   align-self: center;
-  margin-right: 200px;
 }
 
 .select-control {
   width: 292px;
   padding: 10px 20px;
+  margin-left: auto;
   margin-right: 70px;
   font-family: inherit;
   font-size: 18px;
@@ -555,12 +564,12 @@ body {
   color: #333333;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
-  white-space: pre-line;
 }
 
 .hotels-view-buttons {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 8px;
   width: 160px;
 }
 
@@ -681,17 +690,14 @@ body {
   display: flex;
   margin: 0;
   padding: 0;
+  gap: 8px;
   margin-bottom: 60px;
   list-style: none;
 }
 
-.pagination-item:not(:last-child) {
-  margin-right: 8px;
-}
-
 .pagination-link {
   display: block;
-  width: 60px;
+  min-width: 60px;
   height: 60px;
   padding: 14px;
   box-sizing: border-box;
@@ -786,15 +792,6 @@ body {
 
 .button-favorite {
   background-color: #7DB54F;
-}
-
-.dark-background {
-  background-color: #82B3D3;
-}
-
-.dark-background .reason-name,
-.dark-background .reason-description {
-  color: #FFFFFF;
 }
 
 .light-background {
