--- a/styles/styles.css
+++ b/styles/styles.css
@@ -549,6 +549,7 @@ body {
 }
 
 .hotels-title {
+  max-width: 350px;
   margin: 0;
   align-self: center;
 }
@@ -686,8 +687,8 @@ body {
 /* Pagination */
 
 .pagination {
-  width: 400px;
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   gap: 8px;
@@ -696,12 +697,13 @@ body {
 }
 
 .pagination-link {
-  display: block;
+  display: flex;
   min-width: 60px;
   height: 60px;
-  padding: 14px;
+  padding: 0 12px;
   box-sizing: border-box;
-  text-align: center;
+  align-items: center;
+  justify-content: center;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
