--- a/5/styles/styles.css
+++ b/5/styles/styles.css
@@ -67,18 +67,17 @@ body {
 
 .text {
   max-width: 685px;
+  margin: 0 auto;
   font-size: 22px;
   line-height: 26px;
   text-align: center;
-  margin: 0 auto;
 }
-
 
 /* Header */
 
 .page-header {
-  color: #000000;
   min-height: 64px;
+  color: #000000;
 }
 
 .navigation {
@@ -96,10 +95,10 @@ body {
 }
 
 .navigation-list {
-  min-width: 340px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  max-width: 460px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -117,7 +116,7 @@ body {
 }
 
 .navigation-user {
-  min-width: 268px;
+  max-width: 430px;
   margin-left: auto;
   justify-content: flex-end;
 }
@@ -127,8 +126,8 @@ body {
   background-image: url("../images/icons/header-search.svg");
   background-repeat: no-repeat;
   background-position: center center;
-  width: 18px;
-  height: 18px;
+  min-width: 18px;
+  min-height: 18px;
 }
 
 .user-favorite {
@@ -136,8 +135,8 @@ body {
   background-image: url("../images/icons/header-heart.svg");
   background-repeat: no-repeat;
   background-position: center center;
-  width: 18px;
-  height: 17px;
+  min-width: 18px;
+  min-height: 17px;
 }
 
 .user-favorite-count {
@@ -158,15 +157,15 @@ body {
 
 .hero {
   width: 100%;
+  padding-top: 50px;
+  padding-bottom: 78px;
+  margin-bottom: 69px;
   background-color: #1e227a;
   background-image: url("../images/hero-background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center bottom;
   text-align:center;
-  padding-top: 50px;
-  padding-bottom: 78px;
-  margin-bottom: 69px;
 }
 
 /* Reasons */
@@ -184,18 +183,31 @@ body {
 }
 
 .reasons-list {
-  list-style: none;
-  text-align: center;
-  margin: 0;
-  padding: 0;
   display: flex;
   flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-align: center;
 }
 
 .reason-item {
   width: 400px;
   padding: 112px 85px;
   box-sizing: border-box;
+}
+
+.reason-item-big {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  padding: 0;
+  background-color: #82B3D3;
+}
+
+.reason-item-big .reason-name,
+.reason-item-big .reason-description {
+  color: #FFFFFF;
 }
 
 .reason-item-wrapper {
@@ -217,6 +229,10 @@ body {
 
 .reason-description {
   margin: 0;
+}
+
+.reason-img-wrapper {
+  width: 800px;
 }
 
 .reason-img {
@@ -241,9 +257,9 @@ body {
 
 .recommendation-list {
   display: flex;
-  list-style: none;
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 .recommendation-item {
@@ -269,7 +285,7 @@ body {
 }
 
 .recommendation-name {
-  margin: 0;
+  margin-top: 0;
   margin-bottom: 30px;
   font-weight: 700;
   font-size: 24px;
@@ -280,16 +296,16 @@ body {
 }
 
 .recommendation-description {
-  text-align: center;
   margin: 0;
   max-width: 230px;
+  text-align: center;
 }
 
 /* Search */
 
 .search {
-  text-align: center;
   padding: 96px 0;
+  text-align: center;
 }
 
 .search-title {
@@ -311,13 +327,14 @@ body {
   background-image: url("../images/subscribe-background.jpg");
   background-repeat: no-repeat;
   background-position: center center;
+  background-size: cover;
   color: #FFFFFF;
   text-align: center;
 }
 
 .subscription-title {
-  color: #FFFFFF;
   margin-bottom: 20px;
+  color: #FFFFFF;
 }
 
 .subscription-text {
@@ -336,6 +353,7 @@ body {
 }
 
 .subscription-email {
+  width: 452px;
   padding: 12px 20px;
   font-family: inherit;
   font-size: 18px;
@@ -344,7 +362,6 @@ body {
   background-color: #F2F2F2;
   border: none;
   border-radius: 4px 0 0 4px;
-  width: 452px;
 }
 
 /* Footer */
@@ -357,17 +374,17 @@ body {
 }
 
 .social-list {
-  min-width: 142px;
+  max-width: 150px;
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
-  list-style: none;
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 .social-link {
-  padding: 10px;
+  display: block;
+  padding: 12px;
   width: 47px;
   height: 47px;
   box-sizing: border-box;
@@ -382,7 +399,6 @@ body {
   text-decoration: none;
 }
 
-
 /* Catalog */
 
 .catalog-title {
@@ -396,12 +412,12 @@ body {
 
 .breadcrumbs {
   display: flex;
-  list-style: none;
-  font-size: 16px;
-  line-height: 21px;
   margin: 0;
   padding: 0;
   margin-bottom: 40px;
+  list-style: none;
+  font-size: 16px;
+  line-height: 21px;
 }
 
 .breadcrumbs-item:not(:last-child) {
@@ -416,13 +432,13 @@ body {
 /* Filter */
 
 .filter-wrapper {
+  padding: 35px 70px 70px;
+  margin-bottom: 50px;
   background-color: #1e227a;
   background-image: url("../images/catalog-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   color: #FFFFFF;
-  padding: 35px 70px 70px;
-  margin-bottom: 50px;
 }
 
 .catalog-filter-form {
@@ -430,11 +446,11 @@ body {
 }
 
 .catalog-filter-group {
-  border: none;
   margin: 0;
   padding: 0;
   margin-right: 70px;
   width: 150px;
+  border: none;
 }
 
 .catalog-filter-group:nth-child(2) {
@@ -449,14 +465,14 @@ body {
 }
 
 .catalog-filter-list {
-  list-style: none;
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 .catalog-filter-item {
-  line-height: 23px;
   margin-bottom: 16px;
+  line-height: 23px;
 }
 
 .catalog-filter-item:last-child {
@@ -478,6 +494,8 @@ body {
 
 .catalog-filter-input {
   width: 143px;
+  padding: 12px 20px;
+  box-sizing: border-box;
   font-family: inherit;
   font-weight: 700;
   font-size: 18px;
@@ -485,19 +503,16 @@ body {
   color: #000000;
   background: #F2F2F2;
   border: none;
-  padding: 12px 20px;
-  box-sizing: border-box;
 }
 
 .min-price {
-  border-radius: 4px 0 0 4px;
   margin-right: 2px;
+  border-radius: 4px 0 0 4px;
 }
 
 .max-price {
   border-radius: 0 4px 4px 0;
 }
-
 
 /* Ползунок в фильтрах - тестово */
 
@@ -522,7 +537,6 @@ body {
   margin-top: 55px;
 }
 
-
 /* Hotels */
 
 .hotels {
@@ -535,27 +549,28 @@ body {
 }
 
 .hotels-title {
+  max-width: 350px;
   margin: 0;
   align-self: center;
-  margin-right: 200px;
 }
 
 .select-control {
   width: 292px;
   padding: 10px 20px;
+  margin-left: auto;
+  margin-right: 70px;
   font-family: inherit;
   font-size: 18px;
   line-height: 21px;
   color: #333333;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
-  white-space: pre-line;
-  margin-right: 70px;
 }
 
 .hotels-view-buttons {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 8px;
   width: 160px;
 }
 
@@ -586,16 +601,16 @@ body {
 }
 
 .hotels-list {
-  list-style: none;
   display: flex;
   flex-wrap: wrap;
   margin: 0;
+  margin-bottom: 35px;
   padding: 0;
+  padding-bottom: 40px;
   gap: 20px;
   box-sizing: border-box;
-  padding-bottom: 40px;
   border-bottom: 1px solid #E6E6E6;
-  margin-bottom: 40px;
+  list-style: none;
 }
 
 .hotel-card {
@@ -617,11 +632,11 @@ body {
 }
 
 .hotel-title {
+  margin: 0;
+  margin-bottom: 16px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
-  margin: 0;
-  margin-bottom: 16px;
 }
 
 .hotel-wrapper {
@@ -661,32 +676,34 @@ body {
 }
 
 .hotel-rating {
+  padding: 9px 22px;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
-  padding: 9px 22px;
   background: #F2F2F2;
-border-radius: 4px;
+  border-radius: 4px;
 }
 
 /* Pagination */
 
 .pagination {
-  width: 400px;
-  list-style: none;
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   gap: 8px;
   margin-bottom: 60px;
+  list-style: none;
 }
 
 .pagination-link {
-  display: block;
-  width: 60px;
+  display: flex;
+  min-width: 60px;
   height: 60px;
-  padding: 14px;
-  text-align: center;
+  padding: 0 12px;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
@@ -694,7 +711,6 @@ border-radius: 4px;
   color: #FFFFFF;
   background-color: #82B3D3;
   border-radius: 4px;
-  box-sizing: border-box;
 }
 
 .pagination-current {
@@ -778,19 +794,6 @@ border-radius: 4px;
 
 .button-favorite {
   background-color: #7DB54F;
-}
-
-.dark-background {
-  display: flex;
-  align-items: center;
-  background-color: #82B3D3;
-  width: 1200px;
-  padding: 0;
-}
-
-.dark-background .reason-name,
-.dark-background .reason-description {
-  color: #FFFFFF;
 }
 
 .light-background {
