--- a/5/styles/styles.css
+++ b/5/styles/styles.css
@@ -239,6 +239,8 @@ body {
   display: block;
   max-width: 100%;
   height: auto;
+
+  object-fit: cover;
 }
 
 /* Recommendation */
@@ -698,12 +700,12 @@ body {
 
 .pagination-link {
   display: flex;
+  align-items: center;
+  justify-content: center;
   min-width: 60px;
   height: 60px;
   padding: 0 12px;
   box-sizing: border-box;
-  align-items: center;
-  justify-content: center;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
