--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,11 @@
 
 /* Common styles */
 
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 html {
   height: 100%;
 }
@@ -83,20 +88,21 @@ body {
 .navigation {
   display: flex;
   padding: 0 70px;
-  align-items: center;
 }
 
 .navigation-logo {
   margin-right: 30px;
-  margin-bottom: -6px;
+}
+
+.logo {
   width: 140px;
   height: 70px;
+  margin-bottom: -10px;
   z-index: 5;
 }
 
 .navigation-list {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
   max-width: 460px;
   margin: 0;
@@ -131,6 +137,7 @@ body {
 }
 
 .user-favorite {
+  position: relative;
   padding: 22px 12px;
   background-image: url("../images/icons/header-heart.svg");
   background-repeat: no-repeat;
@@ -140,11 +147,19 @@ body {
 }
 
 .user-favorite-count {
+  position: absolute;
+  top: 10px;
+  right: 4px;
+  min-width: 20px;
+  height: 20px;
+  padding: 5px 4px;
+  box-sizing: border-box;
   font-size: 10px;
   line-height: 10px;
   text-align: center;
   color: #FFFFFF;
   background-color: #7DB54F;
+  border-radius: 50%;
 }
 
 /* Main */
@@ -159,7 +174,7 @@ body {
   width: 100%;
   padding-top: 50px;
   padding-bottom: 78px;
-  margin-bottom: 69px;
+  position: relative;
   background-color: #1e227a;
   background-image: url("../images/hero-background.jpg");
   background-size: cover;
@@ -168,10 +183,20 @@ body {
   text-align:center;
 }
 
+.hero::after {
+  content: url("../images/hero-divider.svg");
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: block;
+  width: 1200px;
+  height: 57px
+}
+
 /* Reasons */
 
 .reasons {
-  margin-bottom: 64px;
+  padding-top: 69px;
 }
 
 .reasons-title {
@@ -231,10 +256,6 @@ body {
   margin: 0;
 }
 
-.reason-img-wrapper {
-  width: 800px;
-}
-
 .reason-img {
   display: block;
   max-width: 100%;
@@ -244,6 +265,10 @@ body {
 }
 
 /* Recommendation */
+
+.recommendation {
+  padding-top: 64px;
+}
 
 .recommendation-title {
   margin-bottom: 20px;
@@ -435,13 +460,13 @@ body {
 
 .filter-wrapper {
   padding: 35px 70px 70px;
-  margin-bottom: 50px;
   background-color: #1e227a;
   background-image: url("../images/catalog-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   color: #FFFFFF;
 }
+
 
 .catalog-filter-form {
   display: flex;
@@ -494,6 +519,18 @@ body {
   margin-bottom: 30px;
 }
 
+.catalog-filter-label {
+  position: relative;
+}
+
+.catalog-filter-label span {
+  position: absolute;
+  top: 12px;
+  right: 20px;
+  line-height: 24px;
+  color: rgba(0, 0, 0, 0.3);
+}
+
 .catalog-filter-input {
   width: 143px;
   padding: 12px 20px;
@@ -516,23 +553,13 @@ body {
   border-radius: 0 4px 4px 0;
 }
 
-/* Ползунок в фильтрах - тестово */
-
-.range {
-  width: 100%;
-  appearance: none;
-  height: 4px;
-  background-color: #FFFFFF;
-
-}
-
-.range::-webkit-slider-thumb {
+.range-button {
   width: 20px;
   height: 20px;
   background: #FFFFFF;
+  border: none;
   border-radius: 5px;
   cursor: pointer;
-  appearance: none;
 }
 
 .button-wrapper {
@@ -542,12 +569,12 @@ body {
 /* Hotels */
 
 .hotels {
-  padding: 0 70px;
+  padding:  50px 70px 60px;
 }
 
 .sort-wrapper {
   display: flex;
-  margin-bottom: 40px;
+  align-items: center;
 }
 
 .hotels-title {
@@ -584,6 +611,10 @@ body {
   box-sizing: border-box;
 }
 
+.hotels-view-current {
+  border: 2px solid #000000;
+}
+
 .hotels-view:first-child {
   background-image: url("../images/icons/view-tile.svg");
   background-repeat: no-repeat;
@@ -606,9 +637,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  margin-bottom: 35px;
-  padding: 0;
-  padding-bottom: 40px;
+  padding: 40px 0;
   gap: 20px;
   box-sizing: border-box;
   border-bottom: 1px solid #E6E6E6;
@@ -643,6 +672,7 @@ body {
 
 .hotel-wrapper {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin: 0;
   margin-bottom: 16px;
@@ -678,6 +708,7 @@ body {
 }
 
 .hotel-rating {
+  max-width: 140px;
   padding: 9px 22px;
   font-size: 16px;
   line-height: 20px;
@@ -693,8 +724,8 @@ body {
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
+  padding-top: 36px;
   gap: 8px;
-  margin-bottom: 60px;
   list-style: none;
 }
 
