--- a/styles/styles.css
+++ b/styles/styles.css
@@ -660,6 +660,8 @@ body {
 .hotel-image {
   display: block;
   margin-bottom: 16px;
+  width: 300px;
+  height: 212px;
 }
 
 .hotel-title {
@@ -685,6 +687,7 @@ body {
 
 .hotel-wrapper p {
   margin: 0;
+  word-break: break-all;
 }
 
 .hotel-stars {
