--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@
 
 /* Common styles */
 
+*,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -132,8 +133,8 @@ body {
   background-image: url("../images/icons/header-search.svg");
   background-repeat: no-repeat;
   background-position: center center;
-  min-width: 18px;
-  min-height: 18px;
+  min-width: 44px;
+  height: 64px;
 }
 
 .user-favorite {
@@ -142,8 +143,8 @@ body {
   background-image: url("../images/icons/header-heart.svg");
   background-repeat: no-repeat;
   background-position: center center;
-  min-width: 18px;
-  min-height: 17px;
+  min-width: 44px;
+  height: 64px;
 }
 
 .user-favorite-count {
@@ -153,7 +154,6 @@ body {
   min-width: 20px;
   height: 20px;
   padding: 5px 4px;
-  box-sizing: border-box;
   font-size: 10px;
   line-height: 10px;
   text-align: center;
@@ -219,7 +219,6 @@ body {
 .reason-item {
   width: 400px;
   padding: 112px 85px;
-  box-sizing: border-box;
 }
 
 .reason-item-big {
@@ -238,7 +237,6 @@ body {
 .reason-item-wrapper {
   max-width: 400px;
   padding: 102px 85px;
-  box-sizing: border-box;
 }
 
 .reason-name {
@@ -292,7 +290,6 @@ body {
 .recommendation-item {
   width: 400px;
   padding: 183px 85px 81px;
-  box-sizing: border-box;
 }
 
 .recommendation-item:first-child {
@@ -414,7 +411,6 @@ body {
   padding: 12px;
   width: 47px;
   height: 47px;
-  box-sizing: border-box;
 }
 
 .footer-phone {
@@ -534,7 +530,6 @@ body {
 .catalog-filter-input {
   width: 143px;
   padding: 12px 20px;
-  box-sizing: border-box;
   font-family: inherit;
   font-weight: 700;
   font-size: 18px;
@@ -608,7 +603,6 @@ body {
   height: 48px;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
-  box-sizing: border-box;
 }
 
 .hotels-view-current {
@@ -639,7 +633,6 @@ body {
   margin: 0;
   padding: 40px 0;
   gap: 20px;
-  box-sizing: border-box;
   border-bottom: 1px solid #E6E6E6;
   list-style: none;
 }
@@ -649,7 +642,6 @@ body {
   padding: 20px;
   border: 1px solid #E6E6E6;
   border-radius: 4px;
-  box-sizing: border-box;
 }
 
 .hotel-link {
@@ -739,7 +731,6 @@ body {
   min-width: 60px;
   height: 60px;
   padding: 0 12px;
-  box-sizing: border-box;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
