--- a/styles/styles.css
+++ b/styles/styles.css
@@ -420,8 +420,10 @@ body {
 }
 
 .social-link {
-  display: block;
-  padding: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
   width: 100%;
   height: 100%;
 }
@@ -659,7 +661,7 @@ body {
 .hotel-card {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 212px auto repeat(3, min-content);
+  grid-template-rows: 212px 1fr;
   row-gap: 16px;
   column-gap: 20px;
   min-height: 438px;
@@ -821,9 +823,9 @@ body {
 }
 
 .hotel-button {
-  display: inline-block;
   width: 140px;
   padding: 8px;
+  align-self: center;
 }
 
 .button-dark {
