--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,13 +92,15 @@ body {
 }
 
 .navigation-logo {
+  max-width: 140px;
   margin-right: 30px;
   z-index: 5;
 }
 
 .logo {
-  width: 140px;
-  height: 70px;
+  display: block;
+  width: 100%;
+  height: auto;
   margin-bottom: -10px;
 }
 
@@ -129,20 +131,18 @@ body {
 }
 
 .user-search {
-  padding: 22px 12px;
   background-image: url("../images/icons/header-search.svg");
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
   min-width: 44px;
   height: 64px;
 }
 
 .user-favorite {
   position: relative;
-  padding: 22px 12px;
   background-image: url("../images/icons/header-heart.svg");
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
   min-width: 44px;
   height: 64px;
 }
@@ -172,10 +172,10 @@ body {
 
 .hero {
   width: 100%;
-  padding-top: 50px;
+  padding-top: 51px;
   padding-bottom: 78px;
   position: relative;
-  background-color: #1e227a;
+  background-color: #6d91a8;
   background-image: url("../images/hero-background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -260,7 +260,7 @@ body {
 
 .reason-img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
   align-self: stretch;
   object-fit: cover;
@@ -355,10 +355,10 @@ body {
 
 .subscription {
   padding: 97px 0 105px;
-  background-color: #1e227a;
+  background-color: #3F5E72;
   background-image: url("../images/subscribe-background.jpg");
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
   background-size: cover;
   color: #FFFFFF;
   text-align: center;
@@ -426,9 +426,26 @@ body {
   padding: 10px;
   width: 100%;
   height: 100%;
+  fill: #83B3D3;
+}
+
+.social-link:hover,
+.social-link:focus {
+  fill: #68A2CA;
+}
+
+.social-link:focus-visible,
+.footer-phone:focus-visible,
+.footer-logo:focus-visible {
+  outline-color: #83B3D3;
+}
+
+.social-link:active {
+  fill: rgba(104, 162, 202, 0.3);
 }
 
 .footer-phone {
+  display: block;
   font-size: 40px;
   line-height: 40px;
   text-align: center;
@@ -436,6 +453,30 @@ body {
   color: #000000;
   text-decoration: none;
 }
+
+.footer-phone:hover,
+.footer-phone:focus {
+  color: #756157;
+}
+
+.footer-phone:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
+.footer-logo {
+  display: block;
+  fill: #000000;
+}
+
+.footer-logo:hover,
+.footer-logo:focus {
+  fill: #756157;
+}
+
+.footer-logo:active {
+  fill: rgba(117, 97, 87, 0.3);
+}
+
 
 /* Catalog */
 
@@ -472,7 +513,7 @@ body {
 
 .filter-wrapper {
   padding: 35px 70px 70px;
-  background-color: #1e227a;
+  background-color: #3F5E72;
   background-image: url("../images/catalog-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -631,19 +672,19 @@ body {
 .hotels-view:first-child {
   background-image: url("../images/icons/view-tile.svg");
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
 }
 
 .hotels-view:nth-child(2) {
   background-image: url("../images/icons/view-slideshow.svg");
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
 }
 
 .hotels-view:last-child {
   background-image: url("../images/icons/view-list.svg");
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
 }
 
 .hotels-list {
@@ -660,7 +701,7 @@ body {
 
 .hotel-card {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(2, 140px);
   grid-template-rows: 212px 1fr;
   row-gap: 16px;
   column-gap: 20px;
@@ -668,7 +709,7 @@ body {
   padding: 20px;
   border: 1px solid #E6E6E6;
   border-radius: 4px;
-  word-break: break-all;
+  word-wrap: break-word;
 }
 
 .hotel-card p {
@@ -782,6 +823,7 @@ body {
 /* Buttons and backgrounds */
 
 .button {
+  display: inline-block;
   padding: 8px 34px;
   font-family: inherit;
   font-weight: 700;
@@ -823,7 +865,6 @@ body {
 }
 
 .hotel-button {
-  width: 140px;
   padding: 8px;
   align-self: center;
 }
