--- a/styles/styles.css
+++ b/styles/styles.css
@@ -434,12 +434,6 @@ body {
   fill: #68A2CA;
 }
 
-.social-link:focus-visible,
-.footer-phone:focus-visible,
-.footer-logo:focus-visible {
-  outline-color: #83B3D3;
-}
-
 .social-link:active {
   fill: rgba(104, 162, 202, 0.3);
 }
@@ -492,6 +486,7 @@ body {
 .breadcrumbs {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   margin: 0;
   padding: 0;
   margin-bottom: 40px;
@@ -500,13 +495,48 @@ body {
   line-height: 21px;
 }
 
-.breadcrumbs-item:not(:last-child) {
-  margin-right: 40px;
+.breadcrumbs-item {
+  margin-right: 28px;
+  position: relative;
+}
+
+.breadcrumbs-item:first-child {
+  width: 14px;
+  height: 21px;
+}
+
+.breadcrumbs-item:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  right: -18px;
+  background-image: url(../images/icons/breadcrumbs-arrow.svg);
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center;
+  height: 10px;
+  width: 7px;
 }
 
 .breadcrumbs-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
   color: #FFFFFF;
   text-decoration: none;
+}
+
+.breadcrumbs-link:hover {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.breadcrumbs-link:focus {
+  color: #FFFFFF;
+}
+
+.breadcrumbs-link:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 /* Filter */
@@ -839,9 +869,24 @@ body {
   cursor: pointer;
 }
 
-.navigation-item .button {
-    margin-left: 20px;
+.button:hover,
+.button:focus {
+  background-color: #615048;
+  outline: none;
+}
 
+.button:active {
+  background-color: #756157;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.button:disabled {
+  background-color: #E5E5E5;
+  cursor: default;
+}
+
+.navigation-item .button {
+  margin-left: 20px;
 }
 
 .search-button,
@@ -873,12 +918,54 @@ body {
   background-color: #82B3D3;
 }
 
+.button-dark:hover,
+.button-dark:focus {
+  background-color: #68A2CA;
+}
+
+.button-dark:active {
+  background-color: #82B3D3;
+}
+
 .button-transparent {
   background-color: transparent;
+  border: 3px solid transparent;
+}
+
+.button-transparent:hover {
+  background-color: transparent;
+  opacity: 0.6;
+}
+
+.button-transparent:focus {
+  background-color: transparent;
+  opacity: 1;
+  border: 3px solid #83B3D3;
+}
+
+.button-transparent:active {
+  background-color: transparent;
+  opacity: 0.3;
+}
+
+.button-transparent:disabled {
+  background-color: transparent;
+  opacity: 0.1;
+  cursor: default;
 }
 
 .button-favorite {
   background-color: #7DB54F;
+}
+
+.button-favorite:hover,
+.button-favorite:focus {
+  background-color: #6C9E42;
+}
+
+.button-favorite:active {
+  background-color: #7DB54F;
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .light-background {
