--- a/styles/styles.css
+++ b/styles/styles.css
@@ -116,12 +116,37 @@ body {
 
 .navigation-link {
   display: block;
+  position: relative;
   padding: 20px 16px;
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
   color: #000000;
   text-decoration: none;
+}
+
+.navigation-link:hover,
+.navigation-link:focus {
+  color: #756157;
+}
+
+.navigation-link:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
+
+.navigation-button {
+  margin-left: 20px;
+}
+
+.navigation-link-current::after {
+  content: "";
+  position: absolute;
+  height: 2px;
+  bottom: 0;
+  right: 16px;
+  left: 16px;
+  background-color: #756257;
 }
 
 .navigation-user {
@@ -233,9 +258,28 @@ body {
   background-color: #82B3D3;
 }
 
+.reason-name {
+  position: relative;
+}
+
+.reason-name::after {
+  content: "";
+  width: 60px;
+  height: 2px;
+  position: absolute;
+  bottom: -32px;
+  left: 57px;
+  background-color: #000000;
+  opacity: 0.3;
+}
+
 .reason-item-big .reason-name,
 .reason-item-big .reason-description {
   color: #FFFFFF;
+}
+
+.reason-item-big .reason-name::after {
+  background-color: #FFFFFF;
 }
 
 .reason-item:nth-child(5) {
@@ -399,7 +443,7 @@ body {
 /* Footer */
 
 .page-footer {
-  padding: 45px 70px 35px;
+  padding: 40px 70px 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -563,7 +607,7 @@ body {
 }
 
 .catalog-filter-group:nth-child(2) {
-  margin-right: 140px;
+  margin-right: 150px;
 }
 
 .catalog-filter-title {
@@ -944,10 +988,6 @@ body {
 .button:disabled {
   background-color: #E5E5E5;
   cursor: default;
-}
-
-.navigation-item .button {
-  margin-left: 20px;
 }
 
 .search-button,
