--- a/9/styles/styles.css
+++ b/9/styles/styles.css
@@ -314,8 +314,8 @@ body {
   display: block;
   width: 100%;
   height: auto;
-  align-self: stretch;
-  object-fit: cover;
+  align-self: start;
+  object-fit: contain;
 }
 
 /* Recommendation */
